Configurado el POST de contactos para Swagger
